# polyai-python

./: .env  .env-sample  .gitignore  Dockerfile  Dockerfile.test  README.md  build.sh  make.sh  pyproject.toml  request.json  requirements.txt
examples/: chat_completion.py  helper_methods.py  text_embedding.py
exllama/: README.md  __init__.py  __main__.py  model_init.py
polyai/: __init__.py  __main__.py  chat_completion.py  engine.py  requestor.py  response.py  sett.py  util.py  utils.py
polyai/api/: __init__.py  bert_ner.py  chat_completion.py  embedding.py  engine.py  error.py  helpers.py  requestor.py  response.py  util.py
polyai/exllama/: README.md  __main__.py
polyai/server/: __init__.py  api.py  api_v1.py  app.py  database.py  models.py  orm.py  serverutils.py  state.py  tools.py  utils.py
polyai/server/api/: __init__.py
polyai/server/api/api_v1/: __init__.py  blocking.py  utils.py
polyai/server/api/api_v2/: __init__.py  blocking.py  streaming.py  utils.py
polyai/server/endpoints/: __init__.py
polyai/server/endpoints/api_v1/: __init__.py  blocking.py
polyai/server/endpoints/api_v2/: __init__.py  streaming.py
polyai/server/endpoints/openai/: __init__.py  blocking.py  utils.py
polyai/server/endpoints/textgen/: __init__.py  streaming.py
polyai/server/exllama/: README.md  model_init.py  perplexity.py
polyai/server/loader/: __init__.py  bert.py  exllama.py  gptq.py  utils.py
polyai/server/models/: __init__.py  bert.py  exllama.py  gptq.py  utils.py
scripts/: conda_env.sh  cuda_memory_usage.py  memory_usage.py  ssl_certificate.sh
tests/: chat_completion.py  helper_methods.py  helpers.py  ner_with_bert.py
