[project]
name = "polyai-python"
version = "0.0.02"
authors = [
    { name="Akhlak Mahmood", email="akhlakm@gatech.edu" },
]
description = "Python API for locally hosted LLMs."
readme = "README.md"
requires-python = ">=3.6"

keywords = ["nlp", "development"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
  "pylogg @ git+https://github.com/akhlakm/python-logg.git",
  "requests",
  "flask",
  "sshtunnel",
]

[project.urls]
"Homepage" = "https://github.com/akhlakm/polyai-python"
"Bug Tracker" = "https://github.com/akhlakm/polyai-python/issues"

[project.scripts]
polyai = "polyai.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["polyai"]

